fix spacing around links

--- a/Website/index.css
+++ b/Website/index.css
@@ -136,6 +136,12 @@ div.dropdown {
 /* Needed for sorting address page */
 li.on {display:none;}
 
+a.na{
+  text-decoration: underline;
+   color: #6D6C63;  
+   margin: 0;
+}
+
 
 
 
